k8s/order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: skubestore
spec:
  replicas: 1
  selector:
    matchLabels:
      service: order
  template:
    metadata:
      labels:
        service: order
        tier: backend
        framework: flask
    spec:
      containers:
      - name: order-container
        image: noambenm/skubestore-order-service:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: skubestore
spec:
  selector:
      service: order
  ports:
  - port: 5000
