k8s/product-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: skubestore
spec:
  replicas: 1
  selector:
    matchLabels:
      service: product
  template:
    metadata:
      labels:
        service: product
        tier: backend
        framework: flask
    spec:
      containers:
      - name: product-container
        image: noambenm/skubestore-product-service:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: skubestore
spec:
  selector:
      service: product
  ports:
  - port: 5000
