k8s/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: skubestore
spec:
  selector:
    matchLabels:
      service: user
  template:
    metadata:
      labels:
        service: user
        tier: backend
        framework: flask
    spec:
      containers:
      - name: user-container
        image: noambenm/skubestore-user-service:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: skubestore
spec:
  selector:
      service: user
  ports:
  - port: 5000
