k8s/aws-ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skubestore-ingress
  namespace: skubestore
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: skubestore.click
      http:
        paths:
          - path: "/login"
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5000
          - path: "/register"
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5000
          - path: "/products"
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 5000
          - path: "/orders"
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5000
